workloads/7_kibana/ingress-kibana.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: efk
  name: ingress-kibana
  annotations:
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-2:004625312447:certificate/f3b779b9-f68e-4162-be47-031f68fa7117
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
  labels:
    app: kibana
spec:
  ingressClassName: alb
  defaultBackend:
    service:
      name: kibana
      port: 
        number: 5601
  tls:
  - hosts:
    - kibana.topk8s.com
    secretName: kibana-prod-secret
  rules:
    - host: kibana.topk8s.com
      http:
        paths:
          - pathType: Prefix
            path: /*
            backend:
              service:
                name: kibana
                port:
                  number: 5601
---
